src/css/index.css
#App{
    width: 100vw; /* important consideration */
    height: 100vh;/* important consideration */
    overflow:hidden; /* overflow-x:hidden; important consideration */
   
    /*background-image: url('../milky-way.jpg');
    background-size: 100% 100%;
    background-color: #515151; 
    
    */
    background: #e6af4b;
    /*
    background: #73C8A9;  fallback for old browsers 
    background: -webkit-linear-gradient(to right, #373B44, #73C8A9);  
    background: linear-gradient(to right, #373B44, #73C8A9); 
    */
    
}



.navbar {
    width: 100vw;
    height: 25%;
}

.navbar-content {
    position: relative;
    left: 0;
    height: 100%;
    transform: translateY(-100%);
    background-color:#F5F5F5;
    clip-path: polygon(100% 0, 100% 100%, 0% 0%);
    z-index: 1;
    font-size: 5px;
}
.navbar-item {
    position: relative;
    top: 25%;
    color: white;
    font-size: 5px;
}

.slide-down-enter{
    transform: translateY(-100%);
}
.slide-down-enter-active{
    transform: translateY(0);
    transition: transform 400ms;

}
.slide-down-enter-done{
    transform: translateY(0);

}
.slide-down-exit{
    transform: translateY(0);
}
.slide-down-exit-active{
    transform: translateY(-100%);
    transition: transform 250ms;

}
.slide-down-exit-done{
    transform: translateY(-100%);

}

.abs {
    position: absolute;
}


.fade-enter{
    opacity: 0;
}
.fade-enter-active{
    opacity: 1;
    transition: opacity 1000ms;
}
.fade-enter-done{
    opacity: 1;
}

.fade-exit{
    opacity: 1;
}
.fade-exit-active{
    opacity: 0;
    transition: opacity 1000ms;
}
.fade-exit-done{
    opacity: 0;
}






.grid{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;

}



.hero {
    position: absolute;
    top: 25%;
    height: 75%;
    width: 100vw;
}

